# morpho-zeromq

./: .gitignore  CMakeLists.txt  LICENSE  README.md
guide/Chapter1/HelloWorld/: helloworldclient.morpho  helloworldserver.morpho
guide/Chapter1/TaskVentilator/: tasksink.morpho  taskvent.morpho  taskworker.morpho  testtaskventilator.morpho
guide/Chapter1/WeatherUpdate/: weatherupdateclient.morpho  weatherupdateserver.morpho
help/: zeromq.md
lib/: zeromq.dylib
share/help/: zeromq.md
src/: CMakeLists.txt  Makefile  Makefile.linux  zeromq.c  zeromq.h
test/: testlazypirate.morpho  testproxy.morpho  testpubsub.morpho  testreqrep.morpho  testzeromq.morpho
test/bindconnect/: testforwardbind.morpho  testreversebind.morpho
test/lazypirate/: lpclient.morpho  lpserver.morpho
test/pubsub/: publisher.morpho  subscriber.morpho
test/reqrep/: client.morpho  server.morpho
